# github-cli-login-switcher

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: config.rs  logic.rs  main.rs  notify.rs
