[package]
name = "gh-token-switch"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
toml = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }
